@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180807"
-#define public MagickPackageReleaseDate "snapshot-20180807"
+#define public MagickPackageVersionAddendum ".020180809"
+#define public MagickPackageReleaseDate "snapshot-20180809"
