@@ -1,3 +1,10 @@
+2018-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/xbm.c (XBMInteger): Limit the number of hex digits parsed
+	to avoid signed integer overflow.  Fixes oss-fuzz 9746
+	"graphicsmagick/coder_XBM_fuzzer: Undefined-shift in
+	XBMInteger". (Credit to OSS-Fuzz)
+
 2018-08-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/mat.c Typecast difference to quantum.
